Istio/installation-routing/web-dr-vs-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vs
spec:
  gateways:
  - istio-system/http-gateway
  hosts:
  - "hello.wescale.fr" # The expected host header
  http:
  - route:
    # Look at the https://istio.io/latest/docs/reference/config/networking/virtual-service/#HTTPRouteDestination
    - destination:
        host: K8S_SERVICE_NAME #Target kubernetes service
        port:
          number: 8080        
        subset: v1
      weight: 90
    - destination:
        host: K8S_SERVICE_NAME #Target kubernetes service
        port:
          number: 8080        
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-dr
spec:
  host: K8S_SERVICE_NAME #Target kubernetes service
  subsets:
  - name: v1
    labels:
      V1_LABELS #LABELS for V1
  - name: v2
    labels:
      V2_LABELS #LABELS for V2
