Istio/installation-routing/web-vs-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-servers-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/http-gateway
  http:
  - fault:
      # To be completed for a 7s delay
      # See https://istio.io/latest/docs/reference/config/networking/virtual-service/#HTTPFaultInjection
      ...
    match:
    - uri:
        prefix: "/nginx"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: nginx
      headers:
        response:
          set:
            vs: "nginx-via-web-vs-withdelay"
  - match:
    - uri:
        prefix: "/apache"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: apache
      headers:
        response:
          set:
            vs: "httpd-via-web-nodelay"
